--- a/Belly-Button-Diversity-master/Belly-Button-Biodiversity/templates/index.html
+++ b/Belly-Button-Diversity-master/Belly-Button-Biodiversity/templates/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
+        <h2>Methane and Meat Consumption</h2>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
