--- a/templates/index2.html
+++ b/templates/index2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Group Project 2</title>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
   <div id="nav">
@@ -22,7 +22,7 @@
       <label>Emissions Per Capita</label>
     </p>
     <p>Back to the Methane Emissions Dashboard.
-      <a href="index.html">Methane Emissions</a>
+      <a href="/">Methane Emissions</a>
     </p>
   </div>
   <div class="chart-container right">
@@ -44,7 +44,7 @@
   <script src="https://d3js.org/d3.v4.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script> -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script> -->
-  <script src="bubble.js"></script>
-  <script src="app2.js"></script>
+  <script src="../static/bubble.js"></script>
+  <script src="../static/app2.js"></script>
 </body>
 </html>
