--- a/templates/index2.html
+++ b/templates/index2.html
@@ -3,30 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <title>Group Project 2</title>
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <link rel="stylesheet" href="../static/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="https://d3js.org/d3.v4.js"></script>
+  <script src="../static/app2.js"></script>
+  <!--<link rel="stylesheet" href="style.css">-->
 </head>
 <body>
   <div id="nav">
     <h2> Meat Consumption Dashboard</h2>
     <p>
       Explore meat consumption by year. 
-      Current year: <span id="year-val"></span>
-      <input id="year" type="range" step="1">
-    </p>
-    <p>
-      Choose between total emissions or emissions per capita.
-      <input type="radio" name="data-type" value="emissions" checked>
-      <label>Emissions</label>
-      <input type="radio" name="data-type" value="emissionsPerCapita">
-      <label>Emissions Per Capita</label>
+      Current year: <select id="selDataset" onchange="getData(this.value)">
+        <option value="dataset1">1990</option>
+        <option value="dataset2">1991</option>
+        <option value="dataset3">1992</option>
+        <option value="dataset4">1993</option>
+        <option value="dataset5">1994</option>
+        <option value="dataset6">1995</option>
+        <option value="dataset7">1996</option>
+        <option value="dataset8">1997</option>
+        <option value="dataset9">1998</option>
+        <option value="dataset10">1999</option>
+        <option value="dataset11">2000</option>
+        <option value="dataset12">2001</option>
+        <option value="dataset13">2002</option>
+        <option value="dataset14">2003</option>
+        <option value="dataset15">2004</option>
+        <option value="dataset16">2005</option>
+        <option value="dataset17">2006</option>
+        <option value="dataset18">2007</option>
+        <option value="dataset19">2008</option>
+        <option value="dataset20">2009</option>
+        <option value="dataset21">2010</option>
+        <option value="dataset22">2011</option>
+        <option value="dataset23">2012</option>
+    </select>
+
     </p>
     <p>Back to the Methane Emissions Dashboard.
       <a href="/">Methane Emissions</a>
     </p>
   </div>
-  <div class="chart-container right">
-    <svg 
+  <!-- <div class="chart-container right"> -->
+    <div id="scatter"> </div>
+  <!-- </div> -->
+  </section>
+  <div class="tooltip"></div>
+ 
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>-->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script> -->
+  <!--<script src="bubble.js"></script>-->
+
+</body>
+</html>
+
+
+
+<!-- <svg 
       version="1.1"
       baseProfile="full"
       xmlns="http://www.w3.org/2000/svg" 
@@ -37,14 +72,4 @@
       baseProfile="full"
       xmlns="http://www.w3.org/2000/svg" 
       id="bar">
-    </svg>
-  </div>
-  </section>
-  <div class="tooltip"></div>
-  <script src="https://d3js.org/d3.v4.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script> -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script> -->
-  <script src="../static/bubble.js"></script>
-  <script src="../static/app2.js"></script>
-</body>
-</html>
+    </svg> -->
